--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,42 @@
 {
-    "name": "3DL Code AI Container",
-    "build": {
-      "dockerfile": "Dockerfile",
-      "context": ".."
-    },
+    "name": "3DL Code AI Development Environment",
+    "dockerComposeFile": "docker-compose.yml",
+    "service": "app",
+    "workspaceFolder": "/workspaces/3dl-code-ai",
     "settings": {
-      "python.defaultInterpreterPath": "/usr/local/bin/python",
-      "terminal.integrated.defaultProfile.linux": "/bin/bash"
+        "python.defaultInterpreterPath": "/usr/local/bin/python",
+        "python.analysis.extraPaths": [
+            "/workspaces/3dl-code-ai"
+        ],
+        "terminal.integrated.defaultProfile.linux": "/bin/bash",
+        "sql-formatter.uppercase": true,
+        "sqltools.connections": [
+            {
+                "name": "Development DB",
+                "driver": "PostgreSQL",
+                "server": "db",
+                "port": 5432,
+                "database": "chatbot",
+                "username": "python",
+                "password": "python"
+            }
+        ]
     },
     "extensions": [
-      "ms-python.python",
-      "ms-python.vscode-pylance",
-      "ms-azuretools.vscode-docker"
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-azuretools.vscode-docker",
+        "mtxr.sqltools",
+        "mtxr.sqltools-driver-pg",
+        "adpyke.vscode-sql-formatter"
     ],
     "remoteUser": "python",
     "containerEnv": {
-      "MYVALUE": "True"
+        "MYVALUE": "True"
     },
-    "forwardPorts": [8501],
+    "forwardPorts": [8501, 5432],
     "appPort": 8501,
-    "runArgs": ["--env-file", ".env"],
-    "postCreateCommand": "chown -R python:python /workspaces/3dl-code-ai"
+    "runArgs": ["--env-file", "../.env"],
+    "postCreateCommand": "pip install -r requirements.txt && chown -R python:python /workspaces/3dl-code-ai",
+    "shutdownAction": "stopCompose"
 }
